webpack - style injection

--- a/src/webpack/index.html
+++ b/src/webpack/index.html
@@ -4,7 +4,7 @@
   <title>Riot app</title>
 </head>
 <body>
-
+	<h1>Not red title (outside random tag)</h1>
   <random></random>
   <!-- bundle.js injected -->
 </body>
