app - basic layout

--- a/src/tick-cross-toggle/tick-cross-toggle.tag.html
+++ b/src/tick-cross-toggle/tick-cross-toggle.tag.html
@@ -1,10 +1,10 @@
 <tick-cross-toggle>
 	<i class={tickClass()} onclick={toggleTick}></i><i class={crossClass()} onclick={toggleCross}></i>
 
-	<script type="es6">
+	<script>
 		console.log('tick-cross-toggle.tag')
 
-    import '../node_modules/font-awesome/css/font-awesome.css'
+    import '../../node_modules/font-awesome/css/font-awesome.css'
     import {CheckState} from './tick-cross-toggle.js'
 
     var self = this
