--- a/src/tick-cross-toggle/index.html
+++ b/src/tick-cross-toggle/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 
 <head>
@@ -12,6 +12,6 @@
 	<app></app>
 
 	<!-- app and vendor scripts injected by webpack -->
-<script type="text/javascript" src="app.min.js?c80eac7f5035fc851a3d"></script></body>
+</body>
 
 </html>
