--- a/src/progress-bar/progress-bar.tag.html
+++ b/src/progress-bar/progress-bar.tag.html
@@ -32,7 +32,7 @@
 	</style>
 
 	<script>
-		console.log('shared/progress-bar.tag')
+		console.log('shared/progress-bar.tag.html')
 		import $ from 'jquery'
 
 		var tag = this
